Add "More about me" section in the end and ensure links open in a new tab
* To make the link open in a new tab (not in the same tab) use:  target="_blank"

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </h1>
       <nav>
         <div class="flex flex-row space-x-7 justify-center m-2">
-          <button class="rounded-lg bg-blue-100 px-1"><a href="#about">About Me</a></button>
+          <button class="rounded-lg bg-blue-100 px-1"><a href="#about">More about me</a></button>
           <button class="rounded-lg bg-blue-100 px-1"><a href="#projects">Projects</a></button>
           <button class="rounded-lg bg-blue-100 px-1"><a href="#contact">Contact</a></button>
         </div>
@@ -57,9 +57,9 @@
 
     <main tabindex="0">
 
-      <section id="about" class="mx-4 text-center">
+      <section id="greetings" class="mx-4 text-center">
         <header class="font-semibold">
-          <h2>About Me</h2>
+          <h2>Hello! My name is Afsha</h2>
         </header>
 
         <ul class="text-justify">
@@ -252,6 +252,24 @@
 
       </section>
 
+      <section id="about" class="mx-4 text-center">
+        <header class="font-semibold">
+          <h2>More about me</h2>
+        </header>
+
+        <ul class="text-justify">
+          <li class="text-justify mx-1 my-4"> 
+            I am a recent graduate with a passion for full-stack software development, equipped with comprehensive training from CodeYourFuture. My proficiency spans HTML, CSS, JavaScript, React, Node.js, and SQL, acquired within a dynamic Agile work environment.
+          </li>
+          <li class="text-justify mx-1 my-4">
+            My unique background as a maths teacher has not only fostered my problem-solving skills, but also instilled in me the importance of collaborative teamwork. I bring a fresh perspective, adaptability, and a keen ability to tackle challenges head-on, making me a valuable asset to any software development team.
+          </li>
+          <li class="text-justify mx-1 my-4">
+            In my free time, I enjoy various forms of dancing and love volunteering to end homelessness. I am enthusiastic about combining my creative skills, technical skills and my experience in collaborative problem-solving, to drive innovation and success in the field of software development.
+          </li>
+        </ul>
+      </section>
+
       <section id="contact" class="font-semibold">
         <header class="text-center">
           <h2>Contact me</h2>
@@ -264,7 +282,7 @@
     </main>
     <footer class="flex flex-row justify-center gap-8 my-2">
       <h3>
-        <a href="https://github.com/Afsha10">
+        <a href="https://github.com/Afsha10"  target="_blank">
           <svg
             focusable="false"
             role="presentation"
@@ -283,7 +301,7 @@
       </h3>
 
       <h3>
-        <a href="https://www.linkedin.com/in/afsha-h">
+        <a href="https://www.linkedin.com/in/afsha-h" target="_blank">
           <svg
             focusable="false"
             role="img"
@@ -302,7 +320,7 @@
 
 
       <h3>
-        <a href="mailto:unityofbeing1@gmail.com"
+        <a href="mailto:unityofbeing1@gmail.com" target="_blank"
           ><svg
             focusable="false"
             role="img"
