Change styling and content
* Pair the bottom two projects together side by side to reduce the empty white space as they do not have much description - Use grid to do that
* Make the items inside the grid centred using Tailwind
* Make the content of the project clearer for end-users
*

--- a/index.html
+++ b/index.html
@@ -215,25 +215,25 @@
           </div>
         </div>
 
-        <div class="flex flex-row">
+        <div class="sm:grid sm:grid-cols-2">
 
         <div class="m-5">
-          <h3 class="font-semibold">CYF Hotel React</h3>
-          <p class="text-justify">A hotel website created using HTML, CSS, and React.</p>
+          <h3 class="font-semibold m-2">CYF Hotel React</h3>
+          <p class="text-justify sm:text-center m-2">I have built this hotel website using HTML, CSS, and React.</p>
           <a href="https://github.com/Afsha10/cyf-hotel-react" target="_blank" 
             >Link to GitHub repo</a
           >
           <a href="https://afsha-hotel-react.netlify.app/" target="_blank">
             <img
               src="images/cyfHotel.png" 
-              alt="CYF Hotel React Preview" class="w-64" 
+              alt="CYF Hotel React Preview" class="w-64 my-2 mx-auto" 
             />
           </a>
         </div>
 
         <div class="m-5">
-          <h3 class="font-semibold">HTML & CSS Coursework</h3>
-          <p class="text-justify">A website designed and created using HTML and CSS.</p>
+          <h3 class="font-semibold m-2">A Cake Shop Webpage</h3>
+          <p class="text-justify sm:text-center">I have designed this cake shop website on Figma and built it using HTML and CSS.</p>
           <a
             href="https://github.com/Afsha10/HTML-CSS-Coursework-Week3"
             target="_blank"
@@ -242,7 +242,7 @@
           <a href="https://cakes-co-project.netlify.app/" target="_blank">
             <img
               src="images/responsiveCakeWebpageMobile.png"
-              alt="HTML & CSS Coursework Preview" class="w-64"
+              alt="HTML & CSS Coursework Preview" class="w-64 my-2 mx-auto"
             />
           </a>
         </div>
