--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         Welcome to Afsha's Portfolio !
       </h1>
       <nav>
-        <div class="flex flex-row space-x-7 justify-center m-2">
+        <div class="flex flex-row space-x-4 sm:space-x-10 justify-center m-2">
           <button class="rounded-lg bg-blue-100 px-1"><a href="#about">More about me</a></button>
           <button class="rounded-lg bg-blue-100 px-1"><a href="#projects">Projects</a></button>
           <button class="rounded-lg bg-blue-100 px-1"><a href="#contact">Contact</a></button>
@@ -280,7 +280,8 @@
       </section>
 
     </main>
-    <footer class="flex flex-row justify-center gap-8 my-2">
+    <footer >
+      <div class="flex flex-row justify-center gap-8 my-2">
       <h3>
         <a href="https://github.com/Afsha10"  target="_blank">
           <svg
@@ -337,8 +338,8 @@
           Email</a
         >
       </h3>
-
-
+    </div>
+      <p class="text-center mb-2">Copyright © 2023 Afsha</p>
 
     </footer>
   </body>
