--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
 
       <section id="greetings" class="mx-4 text-center">
         <header class="font-semibold">
-          <h2>Hello! My name is Afsha</h2>
+          <h2>Hello! My name is Afsha.</h2>
         </header>
 
         <ul class="text-justify">
           <li class="text-center"> 
-            I am a software developer from London
+            I am a software developer from London.
           </li>
           <li class="text-center">
-            I have completed a one and half year full-stack software developer programme from Code Your Future
+            I have completed a one and a half year full-stack software developer programme with Code Your Future.
           </li>
         </ul>
       </section>
@@ -83,10 +83,10 @@
             <div class="mb-5">
               <p>This is a responsive, full-stack app I have built to store YouTube videos I like, using React to build the front-end, Tailwind CSS for styling, Node JS to build the server and postgreSQL to create the database.
               <div class="m-5">
-                <li>Created a video storage app from scratch in alignment with the given design brief</li>
-                <li>Studied React and Tailwind using online resources such as YouTube, Udemy, React Tutorial App and effective applied my React this knowledge to bring the project to life</li>
-                <li>Demonstrated adaptability by incorporating feedback from mentors and GitHub reviewers</li>
-                <li>Seamlessly integrated the front-end, back-end and database components, enabling them to work in unison for a fully functional application</li>
+                <li>I created a video storage app from scratch in alignment with the given design brief.</li>
+                <li>I have studied React and Tailwind using online resources such as YouTube, Udemy, React Tutorial App and effectively applied my React knowledge to bring the project to life.</li>
+                <li>I demonstrated adaptability by incorporating feedback from mentors and GitHub reviewers.</li>
+                <li>I have integrated the front-end, back-end and database components, enabling them to work in unison for a fully functional application.</li>
               </div>
               <a href="https://github.com/Afsha10/Full-Stack-Project-Assessment" target="_blank"
                 >Link to GitHub repo</a
@@ -108,15 +108,15 @@
           <h3 class="font-semibold text-center m-3">Spotify Playlist Sieve App (full-stack group project)</h3>
           <div class="sm:grid sm:grid-cols-2">
             <div class="mb-5">
-              <p>Developed “Spotify Playlist Sieve” app for CodeYourFuture, introducing unique MVP features like track filtering, enhancing the app with functionalities not present in standard Spotify features.
+              <p>Developed “Spotify Playlist Sieve” app for CodeYourFuture, introducing unique features like track filtering, enhancing the app with functionalities not present in standard Spotify features.
               <div class="m-5">
-                <li>I have collaborated in writing user stories and breaking them into tickets, creating issues on kanban board and having regular meetings to resolve merge conflicts</li>
-                <li>I took part in daily standups, code review, weekly presentations and retro session</li>
-                <li>I read Spotify documentation and successfully implemented PKCE flow for authentication in React for a very secure login for the client</li>
-                <li>I used Figma to design the user interface and styled the it using CSS and Tailwind</li>
-                <li>I used Spotify API to connect with the Spotify database for the users to access their playlists after authentication</li>
-                <li>I used Spotify API to build unique filtering features- filter playlist by tracks duration, filter by content type</li>
-                <li>I created and added records to the CYF recommendations database on ElephantSQL and connected the database with the back-end</li>
+                <li>I have collaborated in writing user stories and breaking them down into tickets, creating issues on our kanban board and having regular meetings to resolve merge conflicts.</li>
+                <li>I took part in daily standups, code reviews, weekly presentations and retrospectives.</li>
+                <li>I read the RFC documentation alongside the Spotify documentation to successfully implement the PKCE Oauth flow in React for a very secure clientside login.</li>
+                <li>I used Figma to design the user interface and styled the it using CSS and Tailwind.</li>
+                <li>I used Spotify API to connect with the Spotify database for the users to access their playlists after authentication.</li>
+                <li>I used Spotify API to build unique filtering features- filter playlist by tracks duration, filter by content type.</li>
+                <li>I created and added records to the CYF recommendations database on ElephantSQL and connected the database with the back-end.</li>
               </div>
               <a href="https://github.com/Afsha10/song-sieve" target="_blank"
                 >Link to GitHub repo</a
@@ -138,12 +138,12 @@
           <h3 class="font-semibold text-center m-3">Volunteer Booking App (full-stack solo project)</h3>
           <div class="sm:grid sm:grid-cols-2">
             <div class="mb-5">
-              <p>I have developed this volunteer booking app to effectively connect volunteers with morning and evening sessions, achieving a seamless user experience, ensuring real-time information display and interaction for volunteer coordination.
+              <p>I have developed this volunteer booking app to connect volunteers with morning and evening sessions, achieving a seamless user experience, ensuring real-time information is stored on the database.
               <div class="m-5">
-                <li>Designed and developed a custom calendar entirely from scratch using React and Tailwind</li>
-                <li>Created an adaptable front-end calendar using Figma, React and Tailwind, offering users the flexibility to choose between monthly or weekly viewing modes</li>
-                <li>Implemented a robust SQL database  on Supabase using DBeaver, seamlessly connecting it to the server via Node express and successfully deployed the application on Render</li>
-                <li>Established a seamless connection between the database, server, and front-end</li>
+                <li>Designed and developed a custom calendar entirely from scratch using React and Tailwind.</li>
+                <li>Created an adaptable front-end calendar using Figma, React and Tailwind, offering users the flexibility to choose between monthly or weekly viewing modes.</li>
+                <li>Implemented a robust SQL database on Supabase using DBeaver, connecting it to the server via Express js and successfully deployed the application on Render.</li>
+                <li>Established a connection between the database, server, and front-end.</li>
               </div>
               <a href="https://github.com/Afsha10/volunteer-calendar" target="_blank"
                 >Link to GitHub repo</a
@@ -165,12 +165,12 @@
           <h3 class="font-semibold text-center m-3">Recommendations Tracker (work-in-progress full-stack project)</h3>
           <div class="sm:grid sm:grid-cols-2">
             <div class="mb-5">
-              <p>I'm developing a recommendations-tracker app to address the need for efficiently tracking and managing recommendations for a single user
+              <p>I'm developing a recommendations-tracker app to address the need for efficiently tracking and managing recommendations for a single user.
               <div class="m-5">
-                <li>Designed the front-end using Figma, built it using React and tailwind, and deployed it on Render</li>
-                <li>Created a well-structured database on Supabase using dummy data based on features e.g. storing same recommendations tied to different media types</li>
-                <li>Integrated the database with the back-end using Node.js using the API endpoints</li>
-                <li>Connected the backend with the front-end using fetch API</li>
+                <li>Designed the front-end using Figma. I built it using React and tailwind, and deployed it on Render.</li>
+                <li>Created a well-structured database on Supabase using dummy data based on features requirements e.g. storing same recommendations tied to different media types.</li>
+                <li>Integrated the database with the back-end using Express.js.</li>
+                <li>Connected the backend with the front-end using fetch API.</li>
               </div>
               <a href="https://github.com/Afsha10/recommendations-tracker" target="_blank"
                 >Link to GitHub repo</a
@@ -192,12 +192,12 @@
           <h3 class="font-semibold text-center m-3">TV Show Webpage</h3>
           <div class="sm:grid sm:grid-cols-2">
             <div class="mb-5">
-              <p>I have built this responsive TV show webpage created using HTML, CSS, and vanilla JS.
+              <p>I have built a responsive TV show webpage created using HTML, CSS, and vanilla JS.
               <div class="m-5">
-                <li>Used Figma and CSS to ensure a responsive and user-friendly design</li>
-                <li>Collaborated in pair programming sessions to meet project specifications efficiently</li>
-                <li>Continued refining the project implementing feedback from mentors and reviewers</li>
-                <li>Utilised a range of JavaScript techniques-  including callback functions, eventListeners, DOM (Document Object Mode) manipulation and fetch API to ensure site functionality</li>
+                <li>Used Figma and CSS to ensure a responsive and user-friendly design.</li>
+                <li>Collaborated in pair programming sessions to meet project specifications efficiently.</li>
+                <li>Continued refining the project implementing feedback from mentors and reviewers.</li>
+                <li>Utilised a range of JavaScript techniques-  including callback functions, eventListeners, DOM (Document Object Mode) manipulation and fetch API to ensure site functionality.</li>
               </div>
               <a href="https://github.com/Afsha10/tv-show-dom-project" target="_blank"
                 >Link to GitHub repo</a
@@ -259,13 +259,13 @@
 
         <ul class="text-justify">
           <li class="text-justify mx-1 my-4"> 
-            I am a recent graduate with a passion for full-stack software development, equipped with comprehensive training from CodeYourFuture. My proficiency spans HTML, CSS, JavaScript, React, Node.js, and SQL, acquired within a dynamic Agile work environment.
+            I am a full-stack software development, equipped with comprehensive training from CodeYourFuture. My proficiency spans HTML, CSS, JavaScript, React, Node.js, and SQL, acquired within a dynamic Agile work environment.
           </li>
           <li class="text-justify mx-1 my-4">
             My unique background as a maths teacher has not only fostered my problem-solving skills, but also instilled in me the importance of collaborative teamwork. I bring a fresh perspective, adaptability, and a keen ability to tackle challenges head-on, making me a valuable asset to any software development team.
           </li>
           <li class="text-justify mx-1 my-4">
-            In my free time, I enjoy various forms of dancing and love volunteering to end homelessness. I am enthusiastic about combining my creative skills, technical skills and my experience in collaborative problem-solving, to drive innovation and success in the field of software development.
+            In my free time, I enjoy various forms of dancing and passionately support homeless charities through volunteering. I am enthusiastic about combining my creative skills, technical skills and my experience in collaborative problem-solving, to drive innovation and success in the field of software development.
           </li>
         </ul>
       </section>
