p tag inner text changed for test

--- a/zelihapala-portfolio/index.html
+++ b/zelihapala-portfolio/index.html
@@ -52,7 +52,7 @@
             <h2 class="title">Welcome to my portfolio page</h2>
             <p class="text">
               Who am I? I'm a full-stack developer who loves blending great designs with powerful technology. I create user-friendly digital experiences by combining creative front-end work with solid back-end
-              skills. My goal is to build scalable solutions that work smoothly while staying on top of the latest in tech...
+              skills. My goal is to. build scalable solutions that work smoothly while staying on top of the latest in tech...
             </p>
             <div class="buttons">
               <button class="btn-hero">Hire Me</button>
