Group each projects in a light blue container

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <h2>Below are some of the projects I worked on...</h2>
         </header>
 
-        <div class="m-5 text-justify">
+        <div class="m-5 px-2 py-1 text-justify bg-blue-50">
           <h3 class="font-semibold text-center m-3">YouTube Video Storage App (full-stack solo project; completed MVP)</h3>
           <div class="sm:grid sm:grid-cols-2">
             <div class="mb-5">
@@ -196,7 +196,7 @@
           </div>
         </div>
 
-        <div class="m-5 text-justify">
+        <div class="m-5 px-2 py-1 text-justify bg-blue-50">
           <h3 class="font-semibold text-center m-3">Spotify Playlist Sieve App (full-stack group project; completed MVP)</h3>
           <div class="sm:grid sm:grid-cols-2">
             <div class="mb-5">
@@ -212,7 +212,7 @@
                 </ul>
               </p>
 
-              <button class="bg-blue-200 p-3 m-2 rounded-md">
+              <button class="bg-blue-200 p-3 m-2 rounded-md ">
                 <a href="https://song-sieve-frontend.onrender.com/" target="_blank"
                 >Live site</a>
               </button>
@@ -235,9 +235,7 @@
           </div>
         </div>
 
-
-
-        <div class="m-5 text-justify">
+        <div class="m-5 px-2 py-1 text-justify bg-blue-50">
           <h3 class="font-semibold text-center m-3">Volunteer Real Time Booking App (full-stack solo project; completed MVP)</h3>
           <div class="sm:grid sm:grid-cols-2">
             <div class="mb-5">
@@ -274,7 +272,7 @@
         </div>
 
 
-        <div class="m-5 text-justify">
+        <div class="m-5 px-2 py-1 text-justify bg-blue-50">
           <h3 class="font-semibold text-center m-3">Media Recommendations Tracker App for books, films, music and events (full-stack; work-in-progress)</h3>
           <div class="sm:grid sm:grid-cols-2">
             <div class="mb-5">
@@ -308,7 +306,7 @@
           </div>
         </div>
 
-        <div class="m-5 text-justify">
+        <div class="m-5 px-2 py-1 text-justify bg-blue-50">
           <h3 class="font-semibold text-center m-3">TV Show Webpage (collaborated with colleagues)</h3>
           <div class="sm:grid sm:grid-cols-2">
             <div class="mb-5">
@@ -346,7 +344,7 @@
 
         <div class="sm:grid sm:grid-cols-2">
 
-        <div class="m-5">
+        <div class="m-5 px-2 py-1 bg-blue-50">
           <h3 class="font-semibold m-2">CYF Hotel React</h3>
           <p class="text-justify sm:text-center m-2">I have built this hotel website using HTML, CSS, and React.</p>
 
@@ -370,7 +368,7 @@
 
         </div>
 
-        <div class="m-5">
+        <div class="m-5 px-2 py-1 bg-blue-50">
           <h3 class="font-semibold m-2">A Cake Shop Webpage</h3>
           <p class="text-justify sm:text-center">I have designed this cake shop website on Figma and built it using HTML and CSS.</p>
           
