Add technologies I know and have used

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 
       <div class="text-justify sm:text-center mx-4 my-4">  
         <h2 class="text-center font-semibold">My technical skills: </h2>
-        <p><strong>FRONT-END:</strong> HTML, CSS, JavaScript, React, Tailwind, Figma</p>
-        <p><strong>BACK-END:</strong> Node.js, Express.js, PostgreSQL, Supabase, DBeaver</p>
-        <p><strong>DEVOPS:</strong> AWS (S3, EC2, RDS), GitHub Actions, Docker, Terraform</p>
+        <p><strong>FRONT-END:</strong> HTML, CSS, JavaScript, React, Tailwind, Material UI, Figma, Jest</p>
+        <p><strong>BACK-END:</strong> Node.js, Express.js, PostgreSQL, Postman, Supabase, DBeaver</p>
+        <p><strong>DEVOPS:</strong> AWS (S3, EC2, RDS), CI/CD with GitHub Actions, Docker, Terraform, CloudWatch</p>
       </div>
 
         <!-- <div class="grid grid-cols-3 sm:grid-cols-12">
